# pkdns

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  build.sh  build_docker.sh  compose.yaml  servers.txt
.github/actions/setup/: action.yaml  action.yml
.github/workflows/: build-artifacts.yml  rust.yaml  rust.yml
.scripts/: build-artifacts.sh  build_docker.sh
cli/: Cargo.toml  README.md  build.sh
cli/sample/: README.md  pkarr.zone  seed.txt
cli/src/: cli.rs  helpers.rs  main.rs  pkarr_packet.rs  pkarr_publisher.rs  simple_zone.rs
cli/src/commands/: generate.rs  mod.rs  publickey.rs  publish.rs  resolve.rs
cli/src/external_ip/: mod.rs  resolver.rs
cli/src/external_ip/providers/: external_ip_resolver.rs  icanhazip.rs  identme.rs  ipifyorg.rs  ipinfoio.rs  mod.rs  myip.rs
docs/: dns-over-https.md  dyn-dns.md  logging.md
server/: Cargo.toml  build.sh  config.sample.toml  launch.json  pkdns.service  sample-config.toml
server/src/: app_context.rs  bootstrap_nodes.rs  helpers.rs  main.rs  packet_lookup.rs  pkarr_cache.rs  pkarr_resolver.rs  pubkey_parser.rs  query_matcher.rs
server/src/anydns/: custom_handler.rs  dns_socket.rs  main.rs  mod.rs  pending_request.rs  query_id_manager.rs  rate_limiter.rs  server.rs
server/src/config/: config_file.rs  data_dir.rs  global.rs  mock_data_dir.rs  mod.rs  persistent_data_dir.rs  top_level_domain.rs
server/src/dns_over_https/: mod.rs  server.rs
server/src/resolution/: dns_socket.rs  dns_socket_builder.rs  helpers.rs  mod.rs  parsed_packet.rs  pending_request.rs  query_id_manager.rs  rate_limiter.rs  response_cache.rs
server/src/resolution/dns_packets/: mod.rs  parsed_packet.rs  parsed_query.rs
server/src/resolution/pkd/: bootstrap_nodes.rs  mod.rs  pkarr_cache.rs  pkarr_resolver.rs  pubkey_parser.rs  query_matcher.rs  top_level_domain.rs
src/: dns_server.rs  main.rs  packet_lookup.rs  pkarr_authority.rs  pkarr_cache.rs  pkarr_resolver.rs  pknames_resolver.rs
