[package]
name = "pkdns-cli"
version = "0.6.0-rc.2"
authors = ["SeverinAlexB <severin@synonym.to>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.49"
serde = { version = "1.0.199", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
pkarr = { version = "2.2.0", features = ["dht", "async", "rand"]}
domain = {version = "0.10.1", features = ["zonefile", "bytes"]}
bytes = "1.7.1"
chrono = "0.4.38"
shellexpand = "3.1.0"
zbase32 = "0.1.2"
ctrlc = "3.4.4"
