[package]
name = "pkdns"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"
simple-dns = "0.6.0"
pkarr = { version = "2.2.0", features = ["dht", "async", "rand"]}
zbase32 = "0.1.2"
ttl_cache = "0.5.1"
clap = "4.4.18"
any-dns = "0.2.5"
chrono = "0.4.33"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
