[package]
name = "pkdns"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"
simple-dns = "0.6.0"
pkarr = { version = "2.2.1", features = ["dht", "async", "rand"]}
zbase32 = "0.1.2"
clap = "4.4.18"
chrono = "0.4.33"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["smallvec", "fmt", "ansi", "tracing-log", "std", "env-filter"]}
rustdns = "0.4.0"
moka = { version = "0.12.8", features = ["future"] }
dashmap = "6.1.0"

dyn-clone = "1.0.16"
thiserror = "1.0.56"
governor = "0.7.0"

