[package]
name = "pkdns"
version = "0.7.1"
authors = ["SeverinAlexB <severin@synonym.to>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"
pkarr = { version = "3.8.0"}
zbase32 = "0.1.2"
clap = { version = "4.4.18", features = ["derive"] }
chrono = "0.4.33"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["smallvec", "fmt", "ansi", "tracing-log", "std", "env-filter"]}
rustdns = "0.4.0"
moka = { version = "0.12.8", features = ["future"] }

dyn-clone = "1.0.16"
thiserror = "1.0.56"
governor = "0.7.0"
axum = { version = "0.7.9", features = ["tokio"]}
axum-extra = { version = "0.9.6", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = {version = "1.0.216", features = ["derive"]}
base64 = "0.22.1"
toml = "0.8.19"
dirs = "5.0.1"
once_cell = "1.20.2"
rand = "0.8"
self_cell = "1.1.0"
tempfile = "3.20.0"


[dev-dependencies]
axum-test = "16.4.1"
tracing-test = "0.2.5"

